--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,5 +1,6 @@
 {
-    "tasks": {
-        "cli": "deno run --allow-net --allow-read --allow-env ./cli.ts"
-    }
+  "tasks": {
+    "cli": "deno run --allow-net --allow-read --allow-env ./cli.ts",
+    "server": "deno run --allow-net --allow-read --allow-env ./server.ts"
+  }
 }
